css/style/styles.css
/* ... */
#sliding-popup .euccp-agree-button {
  background-color: #f8f1e9;;
  background-image: none;
  text-shadow: none;
  color: #4b1d4e;
  box-shadow: none;
  border: 3px solid #f8f1e9;
  border-radius: 10px;
}

#sliding-popup .euccp-default-button:hover,
#sliding-popup .euccp-agree-button:hover {
  background-color: #f8f1e9;
  background-image: none;
  color: #4b1d4e;
}

.manage-cookies-popup {
  display: none;
  position: fixed;
  top: 0;
  bottom: 0;
  right: 0;
  background-color: #4b1d4e;
  width: 30%;
  padding: 0.5em 1em;
  text-align: left;
  overflow: auto;
}

.manage-cookies-popup hr {
  margin-top: 15px;
  margin-bottom: 15px;
}

.manage-cookies-popup p,
.manage-cookies-popup .euccp-manage-cookies-info,
.manage-cookies-popup .eu-cookie-compliance-category-description {
  font-size: 12px;
}

.manage-cookies-popup .manage-cookies-title {
  font-size: 28px;
  text-align: center;
  margin-top: 10px;
}

.manage-cookies-popup .manage-cookies-popup-close-button {
  position: absolute;
  right: 5px;
  top: 5px;
  background-color: transparent;
  border: none;
  font-size: 24px;
}

.manage-cookies-popup .eu-cookie-compliance-categories {
  padding-top: 0;
}

.manage-cookies-popup .eu-cookie-compliance-categories-buttons{
  max-width: unset;
  float: unset;
  text-align: center;
}

@media (min-width: 992px) {
  #sliding-popup {
    background: transparent !important;
    height: 100% !important;
    opacity: 100%;
  }

  #sliding-popup .popup-content {
    background: #52094F;
    border-radius: 0 0 25px 25px;
    opacity: 95%;
    max-width: 100%;
    min-height: 180px;
    padding: 0 1.5em;
    flex-direction: column;
    justify-content: space-between;
  }

  #sliding-popup .popup-content #popup-text {
    max-width: 100%;
  }

  #sliding-popup .eu-cookie-compliance-banner .popup-content #popup-text button,
  #sliding-popup .eu-cookie-compliance-banner .popup-content #popup-text p {
    font-size: 14px;
    line-height: 1.8;
  }

  #sliding-popup .eu-cookie-compliance-banner .popup-content #popup-text .text-head {
    font-size: 16px;
    font-weight: bold;
  }

  #sliding-popup .eu-cookie-compliance-banner .popup-content #popup-text button {
    font-weight: bold;
  }

  #sliding-popup .popup-content #popup-buttons {
    max-width: 100%;
    align-self: flex-end;
  }

  #sliding-popup .euccp-default-button,
  #sliding-popup .euccp-agree-button {
    font-size: 16px;
    padding: 6px 10px;
  }

  .eu-cookie-compliance-banner {
    position: fixed;
    max-width: 1000px;
    width: 50%;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
  }

  .rgpd-background-img {
    height: 240px;
    background-position: center;
    background-size: cover;
    border-radius: 25px 25px 0 0;
    background-image: url(/img/rgpd.jpg);
  }

  .rgpd-background-img p {
    font-size: 12px;
    position: absolute;
    top: 220px;
    right: 5px;
  }
}

@media (min-width: 992px) {
  .zone-blur {
    filter: blur(4px);
    width: 100%;
    height: 100%;
    position: fixed;
  }
}

/* Mobile version */
@media (max-width: 992px) {
  .rgpd-background-img {
    background-image: none !important;
  }

  .rgpd-background-img, .rgpd-background-img p {
    display: none !important;
  }

  .manage-cookies-popup {
    top: 50vh;
    left: 0;
    right: 0;
    bottom: 0;
    width: 100%;
    overflow: auto;
    border-radius: 0;
  }

  .manage-cookies-popup .manage-cookies-title {
    font-size: 22px;
  }
}

/* Toggle switch */
.manage-cookies-popup .switch {
  float: right;
  position: relative;
  width: 56px;
  height: 30px;
}

.manage-cookies-popup .switch input {
  opacity: 0;
  width: 0;
  height: 0;
}

.manage-cookies-popup .slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #ccc;
  -webkit-transition: .4s;
  transition: .4s;
}

.manage-cookies-popup .slider:before {
  position: absolute;
  content: "";
  height: 26px;
  width: 26px;
  left: 2px;
  bottom: 2px;
  background-color: white;
  -webkit-transition: .4s;
  transition: .4s;
}

input:checked:disabled + .slider {
  background-color: green;
  cursor: not-allowed;
}

input:checked + .slider {
  background-color: #00ff00;
}

input:focus + .slider {
  box-shadow: 0 0 1px #00ff00;
}

input:checked + .slider:before {
  -webkit-transform: translateX(26px);
  -ms-transform: translateX(26px);
  transform: translateX(26px);
}

.manage-cookies-popup .slider.round {
  border-radius: 34px;
}

.manage-cookies-popup .slider.round:before {
  border-radius: 50%;
}

/* Special style for Cookie Content Blocker */
.cookie-content-blocker-wrapper {
  height: 100%;
}

.cookie-content-blocker-wrapper .cookie-content-blocker__message-wrapper {
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  background-color: #4b1d4e;
  opacity: 90%;
  color: white;
}

.cookie-content-blocker-wrapper .cookie-content-blocker__button {
  width: auto;
  margin: 0 auto;
  background-color: #f8f1e9;
  color: #4b1d4e;
  font-weight: bold;
  border-radius: 6px;
  border: 3px solid #f8f1e9;
}

/* Cookie popin */
#sliding-popup.sliding-popup-bottom {
    background: #52094F;
}

#sliding-popup .popup-content {
  display: flex;
  align-items: center;
  padding-top: 15px;
  padding-bottom: 15px;
}

#sliding-popup .popup-content #popup-text {
  float: none;
  margin: 0;
}

#sliding-popup .popup-content #popup-text p,
#sliding-popup .popup-content #popup-text button {
  font-size: 12px;
  font-weight: normal;
  margin-bottom: 0px;
}

#sliding-popup .popup-content #popup-buttons button {
  margin-top: 7px;
}

#sliding-popup .popup-content #popup-buttons {
  float: none;
  margin: 0;
  font-size: 12px;
}

@media (max-width: 1199px){
  #sliding-popup .popup-content #popup-text p {
    font-size: 14px;
  }
  #sliding-popup .popup-content #popup-buttons {
    font-size: 14px;
  }
}

